--- a/port-2.html
+++ b/port-2.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 
@@ -39,229 +41,138 @@
         <div class="grid-container">
             <div class="grid-item">
                 <figcaption>Sandshrew</figcaption>
-                <img id="myImg" class="port-cell" src="css/images/ilustra-sand.png" alt="Sandshrew">
+                <a data-fancybox="gallery" href="css/images/i-sandshrew.png"><img src="css/images/ilustra-sand.png" alt="Sandshrew"></a>
+                <!-- <img id="myImg" class="port-cell" src="css/images/ilustra-sand.png" alt="Sandshrew"> -->
 
-                <div id="myModal" class="modal">
+<!--                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" class="img" id="img01">
                     <div class="caption" id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Knight</figcaption>
-                <img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-knight.png"><img src="css/images/ilustra-knight.png" alt="Knight"></a>
+                <!-- <img class="port-cell" src="css/images/ilustra-knight.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Alucard</figcaption>
-                <img class="port-cell" src="css/images/ilustra-alucard.png" alt="Ilustrações">
-
-                <div id="myModal" class="modal">
+                <a data-fancybox="gallery" href="css/images/ilustra-alucard.png"><img src="css/images/ilustra-alucard.png" alt="Alucard"></a>
+<!--                 <img class="port-cell" src="css/images/ilustra-alucard.png" alt="Ilustrações"> -->
+                
+<!--                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>King Goat</figcaption>
-                <img class="port-cell" src="css/images/ilustra-goat.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-goat.png"><img src="css/images/ilustra-goat.png" alt="King Goat"></a>
+<!--                 <img class="port-cell" src="css/images/ilustra-goat.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Pumpkinmon</figcaption>
-                <img class="port-cell" src="css/images/ilustra-pumpkinmon.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-pumpkinmon.png"><img src="css/images/ilustra-pumpkinmon.png" alt="Pumpkinmon"></a>                
+<!--                 <img class="port-cell" src="css/images/ilustra-pumpkinmon.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Krizalid</figcaption>
-                <img class="port-cell" src="css/images/ilustra-krizalid.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-krizalid.png"><img src="css/images/ilustra-krizalid.png" alt="Krizalid"></a> 
+<!--                 <img class="port-cell" src="css/images/ilustra-krizalid.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Sherlock</figcaption>
-                <img class="port-cell" src="css/images/ilustra-sherlock.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-sherlock.png"><img src="css/images/ilustra-sherlock.png" alt="Sherlock"></a> 
+<!--                 <img class="port-cell" src="css/images/ilustra-sherlock.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Captain America</figcaption>
-                <img class="port-cell" src="css/images/ilustra-captainamerica.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-captainamerica.png"><img src="css/images/ilustra-captainamerica.png" alt="Captain America"></a> 
+<!--                 <img class="port-cell" src="css/images/ilustra-captainamerica.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Age of Ulton</figcaption>
-                <img class="port-cell" src="css/images/ilustra-ageofultron.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-ageofultron.png"><img src="css/images/ilustra-ageofultron.png" alt="Age of Ulton"></a>
+<!--                 <img class="port-cell" src="css/images/ilustra-ageofultron.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Mother of the Dragons </figcaption>
-                <img class="port-cell" src="css/images/ilustra-motherofdragons.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-motherofdragons.png"><img src="css/images/ilustra-motherofdragons.png" alt="Mother of the Dragons"></a>
+<!--                 <img class="port-cell" src="css/images/ilustra-motherofdragons.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Akuma</figcaption>
-                <img class="port-cell" src="css/images/ilustra-akuma.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-akuma.png"><img src="css/images/ilustra-akuma.png" alt="Akuma"></a>
+<!--                 <img class="port-cell" src="css/images/ilustra-akuma.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Slifer</figcaption>
-                <img class="port-cell" src="css/images/ilustra-slifer.png" alt="Ilustrações">
+                <a data-fancybox="gallery" href="css/images/ilustra-slifer.png"><img src="css/images/ilustra-slifer.png" alt="Slifer"></a>
+                <!-- <img class="port-cell" src="css/images/ilustra-slifer.png" alt="Ilustrações">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" id="img01">
                     <div id="caption"></div>
-                </div>
+                </div> -->
             </div>
         </div>
-        <!-- 
-        <table>
-            <tr>
-                <td>
-                    <figure class="container-jobs">
-                        <img id="myImg" class="port-cell" src="css/images/ilustra-sand.png" alt="Sandshrew" />
-                        <figcaption>Sandshrew</figcaption>
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img01">
-                            <div id="caption"></div>
-                        </div>
-                    </figure>
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img id="myImg2" class="port-cell" src="css/images/ilustra-knight.png" alt="Knight" />
-                        <figcaption>Knight</figcaption>
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img02">
-                            <div id="caption"></div>
-                        </div>
-                    </figure>
 
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-dragons.png" alt="Dragons" />
-                        <figcaption>Dragons</figcaption>
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img03">
-                            <div id="caption"></div>
-                        </div>
-                    </figure>
-
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-pumpkinmon.png" alt="Pumpkinmon" />
-                        <figcaption>Pumpkinmon</figcaption>
-                    </figure>
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-ageofultron.png" alt="Age of Ultron" />
-                        <figcaption>Age of Ultron</figcaption>
-                    </figure>
-
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-motherofdragons.png" alt="Mother of Dragons" />
-                        <figcaption>Mother of Dragons</figcaption>
-                    </figure>
-
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-krizalid.png" alt="Krizalid" />
-                        <figcaption>Krizalid</figcaption>
-                    </figure>
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-sherlock.png" alt="Sherlock" />
-                        <figcaption>Sherlock</figcaption>
-                    </figure>
-
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-alucard.png" alt="Alucard" />
-                        <figcaption>Alucard</figcaption>
-                    </figure>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-slifer.png" alt="Slifer The Sky Dragon" />
-                        <figcaption>Slifer The Sky Dragon</figcaption>
-                    </figure>
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-akuma.png" alt="Akuma" />
-                        <figcaption>Akuma</figcaption>
-                    </figure>
-
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/ilustra-captainamerica.png" alt="Captain America" />
-                        <figcaption>Captain America</figcaption>
-                    </figure>
-                </td>
-            </tr>
-        </table> -->
     </section>
 
     <footer id="footer-normal">
