--- a/port-3.html
+++ b/port-3.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 
@@ -38,113 +40,60 @@
         <div class="grid-container">
             <div class="grid-item">
                 <figcaption>Volare</figcaption>
-                <img id="myImg" class="port-cell" src="css/images/design-volare.png" alt="Volare">
+                <a data-fancybox="gallery" href="css/images/design-volare.png"><img src="css/images/design-volare.png" alt="Volare"></a>
+<!--                 <img id="myImg" class="port-cell" src="css/images/design-volare.png" alt="Volare">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" class="img" id="img01">
                     <div class="caption" id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Jandaia</figcaption>
-                <img id="myImg" class="port-cell" src="css/images/design-jandaia.png" alt="Jandaia">
+                <a data-fancybox="gallery" href="css/images/design-jandaia.png"><img src="css/images/design-jandaia.png" alt="Jandaia"></a>
+<!--                 <img id="myImg" class="port-cell" src="css/images/design-jandaia.png" alt="Jandaia">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" class="img" id="img01">
                     <div class="caption" id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Cecomil</figcaption>
-                <img id="myImg" class="port-cell" src="css/images/design-cecomil.png" alt="Cecomil">
+                <a data-fancybox="gallery" href="css/images/design-cecomil.png"><img src="css/images/design-cecomil.png" alt="Cecomil"></a>
+<!--                 <img id="myImg" class="port-cell" src="css/images/design-cecomil.png" alt="Cecomil">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" class="img" id="img01">
                     <div class="caption" id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Draw In</figcaption>
-                <img id="myImg" class="port-cell" src="css/images/design-drawin.png" alt="Draw In">
+                <a data-fancybox="gallery" href="css/images/design-drawin.png"><img src="css/images/design-drawin.png" alt="Draw In"></a>
+<!--                 <img id="myImg" class="port-cell" src="css/images/design-drawin.png" alt="Draw In">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" class="img" id="img01">
                     <div class="caption" id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Time Mentor</figcaption>
-                <img id="myImg" class="port-cell" src="css/images/design-timementor.png" alt="Time Mentor">
+                <a data-fancybox="gallery" href="css/images/design-timementor.png"><img src="css/images/design-timementor.png" alt="Time Mentor"></a>
+                <!-- <img id="myImg" class="port-cell" src="css/images/design-timementor.png" alt="Time Mentor">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" class="img" id="img01">
                     <div class="caption" id="caption"></div>
-                </div>
+                </div> -->
             </div>
         </div>
-        <!-- 
-        <table>
-            <tr>
-                <td>
-                    <figure class="container-jobs">
-                        <figcaption>Volare</figcaption>
-                        <img id="myImg" class="port-cell" src="css/images/design-volare.png" alt="Volare" />
-
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img01">
-                            <div id="caption"></div>
-                        </div>
-                    </figure>
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <figcaption>Jandaia</figcaption>
-                        <img id="myImg2" class="port-cell" src="css/images/design-jandaia.png" alt="Jandaia" />
-
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img02">
-                            <div id="caption"></div>
-                        </div>
-                    </figure>
-
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/design-cecomil.png" alt="Cecomil" />
-                        <figcaption>Cecomil</figcaption>
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img03">
-                            <div id="caption"></div>
-                        </div>
-                    </figure>
-
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/design-drawin.png" alt="Draw In" />
-                        <figcaption>Draw In</figcaption>
-                    </figure>
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/design-timementor.png" alt="Time Mentor" />
-                        <figcaption>Time Mentor</figcaption>
-                    </figure>
-
-                </td>
-
-            </tr>
-        </table> -->
     </section>
 
     <footer id="footer-normal">
