--- a/port-4.html
+++ b/port-4.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 
@@ -39,73 +41,38 @@
         <div class="grid-container">
             <div class="grid-item">
                 <figcaption>Charizard</figcaption>
-                <img id="myImg" class="port-cell" src="css/images/model-charizard.png" alt="Charizard">
+                <a data-fancybox="gallery" href="css/images/model-charizard.png"><img src="css/images/model-charizard.png" alt="Charizard"></a>
+<!--                 <img id="myImg" class="port-cell" src="css/images/model-charizard.png" alt="Charizard">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" class="img" id="img01">
                     <div class="caption" id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Impmon</figcaption>
-                <img id="myImg" class="port-cell" src="css/images/model-impmon.png" alt="Impmon">
+                <a data-fancybox="gallery" href="css/images/model-impmon.png"><img src="css/images/model-impmon.png" alt="Impmon"></a>
+<!--                 <img id="myImg" class="port-cell" src="css/images/model-impmon.png" alt="Impmon">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" class="img" id="img01">
                     <div class="caption" id="caption"></div>
-                </div>
+                </div> -->
             </div>
             <div class="grid-item">
                 <figcaption>Pokebola</figcaption>
-                <img id="myImg" class="port-cell" src="css/images/model-pokebola.png" alt="Pokebola">
+                <a data-fancybox="gallery" href="css/images/model-pokebola.png"><img src="css/images/model-pokebola.png" alt="Impmon"></a>
+<!--                 <img id="myImg" class="port-cell" src="css/images/model-pokebola.png" alt="Pokebola">
 
                 <div id="myModal" class="modal">
                     <span class="close">&times;</span>
                     <img class="modal-content" class="img" id="img01">
                     <div class="caption" id="caption"></div>
-                </div>
+                </div> -->
             </div>
         </div>
-        <!-- <table>
-            <tr>
-                <td>
-                    <figure class="container-jobs">
-                        <img id="myImg" class="port-cell" src="css/images/model-charizard.png" alt="Charizard" />
-                        <figcaption>Charizard</figcaption>
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img01">
-                            <div id="caption"></div>
-                        </div>
-                    </figure>
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img id="myImg2" class="port-cell" src="css/images/model-impmon.png" alt="Impmon" />
-                        <figcaption>Impmon</figcaption>
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img02">
-                            <div id="caption"></div>
-                        </div>
-                    </figure>
-
-                </td>
-                <td>
-                    <figure class="container-jobs">
-                        <img class="port-cell" src="css/images/model-pokebola.png" alt="Pokebola" />
-                        <figcaption>Pokebola</figcaption>
-                        <div id="myModal" class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal-content" id="img03">
-                            <div id="caption"></div>
-                        </div>
-                    </figure>
-
-                </td>
-            </tr> -->
     </section>
 
     <footer id="redes">
